Correct song IDs in album view

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -33,7 +33,7 @@
                         { id: "dg", playbackLength: "2:32", tags: ['first'] },
                         { id: "itw", playbackLength: "4:28", tags: ['first'] },
                         { title: "Fill It Up", playbackLength: "2:30", tags: [ 'instrumental', 'notC40' ] },
-                        { id: "ru", playbackLength: "4:35", tags: ['first'] },
+                        { id: "rup", playbackLength: "4:35", tags: ['first'] },
                         { title: "Rush Into The Crazy World", playbackLength: "0:48", tags: [ 'instrumental', 'notC40' ] },
                         { id: "itl", playbackLength: "4:03", tags: ['first'] },
                         { id: "wmf", playbackLength: "5:09", tags: ['first'] },
@@ -117,8 +117,8 @@
                     playbackLength: "43:51",
                     tracks:
                     [
-                        { id: "lnl", playbackLength: "4:30", tags: [ 'first' ], description: "Crush 40's hit song, Live & Learn. This is the song's first album release." },
-                        { id: "ru", playbackLength: "4:34", tags: [ 'rerelease' ] },
+                        { id: "lal", playbackLength: "4:30", tags: [ 'first' ], description: "Crush 40's hit song, Live & Learn. This is the song's first album release." },
+                        { id: "rup", playbackLength: "4:34", tags: [ 'rerelease' ] },
                         { id: "itw", playbackLength: "4:29", tags: [ 'rerelease' ] },
                         { id: "itl", playbackLength: "4:03", tags: [ 'rerelease' ] },
                         { id: "wmf", playbackLength: "5:09", tags: [ 'rerelease' ] },
@@ -173,7 +173,7 @@
                         { id: "iam", playbackLength: "3:51", tags: [ 'remix' ] },
                         { id: "hw", playbackLength: "5:17", tags: [ 'remix' ] },
                         { id: "ug", playbackLength: "4:45", tags: [ 'cover', 'first' ] },
-                        { id: "All Hail Shadow", playbackLength: "4:02", tags: [ 'rerelease' ] },
+                        { id: "ahs", playbackLength: "4:02", tags: [ 'rerelease' ] },
                         { id: "ntb", playbackLength: "4:40", tags: [ 'rerelease' ] },
                         { id: "ru", playbackLength: "4:35", tags: [ 'rerelease' ] },
                         { id: "itw", playbackLength: "4:29", tags: [ 'rerelease' ] },
@@ -308,20 +308,20 @@
                         { id: "oyh", playbackLength: "3:54", tags: [ 'live' ] },
                         { id: "ug", playbackLength: "2:36", tags: [ 'cover', 'live' ], description: "Only available on <b>digital</b> releases." },
                         { id: "srih", playbackLength: "2:15", tags: [ 'live' ], description: "Only available on <b>digital</b> releases." },
-                        { id: "ftn", playbackLength: "2:31", tags: [ 'live' ], description: "Only available on <b>digital</b> releases." },
+                        { id: "ftk", playbackLength: "2:31", tags: [ 'live' ], description: "Only available on <b>digital</b> releases." },
                         { id: "kotw", playbackLength: "4:30*", tags: [ 'live' ], description: "*One second longer on CD due to different transition" },
                         { id: "soh", playbackLength: "5:09", tags: [ 'live' ], description: "Only available on <b>digital</b> releases." },
                         { id: "iam", playbackLength: "4:30", tags: [ 'live' ] },
                         { id: "wm", playbackLength: "2:37", tags: [ 'live' ] },
                         { id: "ntb", playbackLength: "4:40*", tags: [ 'live' ], description: "*4 seconds longer on CD to include Johnny's Japanese \"Everyone's the best!\" (minna saikou!) leading up to Fire Woman" },
                         { id: "fw", playbackLength: "5:21", tags: [ 'cover', 'live' ], description: "Only available on <b>CD</b> due to copyright concerns." },
-                        { id: "ru", playbackLength: "3:20", tags: [ 'live' ] },
+                        { id: "rup", playbackLength: "3:20", tags: [ 'live' ] },
                         { id: "wmf", playbackLength: "5:27", tags: [ 'live' ] },
                         { id: "itw", playbackLength: "3:25", tags: [ 'live' ] },
                         { id: "ra", playbackLength: "4:24", tags: [ 'live' ] },
                         { id: "sb", playbackLength: "2:36", tags: [ 'live' ] },
                         { id: "ahs", playbackLength: "2:16", tags: [ 'live' ] },
-                        { id: "lnl", playbackLength: "5:01", tags: [ 'live' ] },
+                        { id: "lal", playbackLength: "5:01", tags: [ 'live' ] },
                         { id: "ootd", playbackLength: "4:32", tags: [ 'live' ] },
                         { id: "wimo", playbackLength: "4:21", tags: [ 'live' ] },
                     ],
@@ -386,20 +386,20 @@
                     starText: "(The max a CD can hold is 1:14:00)",
                     tracks:
                     [
-                        { id: "2n2r", playbackLength: "3:46", tags: [ 'first', 'original' ] },
+                        { id: "twoNights", playbackLength: "3:46", tags: [ 'first', 'original' ] },
                         { id: "bm", playbackLength: "4:46", tags: [ 'first', 'original' ] },
                         { id: "lotd", playbackLength: "4:32", tags: [ 'first', 'original' ] },
                         { id: "dnd", playbackLength: "4:43", tags: [ 'first', 'original' ] },
                         { id: "dg", playbackLength: "2:31", tags: [ 'live' ] },
                         { id: "itw", playbackLength: "3:22", tags: [ 'live' ] },
                         { id: "f", playbackLength: "3:26", tags: [ 'live' ] },
-                        { id: "2n2r", playbackLength: "3:43", tags: [ 'live' ], description: "A <i>live</i> performance of the track, as opposed to the studio track at the beginning." },
+                        { id: "twoNights", playbackLength: "3:43", tags: [ 'live' ], description: "A <i>live</i> performance of the track, as opposed to the studio track at the beginning." },
                         { id: "dnd", playbackLength: "4:56", tags: [ 'live' ], description: "A <i>live</i> performance of the track, as opposed to the studio track at the beginning." },
                         { id: "wm", playbackLength: "2:38", tags: [ 'live' ] },
                         { id: "ll", playbackLength: "5:53", tags: [ 'live' ] },
                         { id: "kotw", playbackLength: "3:51", tags: [ 'live' ] },
                         { id: "wmf", playbackLength: "5:18", tags: [ 'live' ] },
-                        { id: "ru", playbackLength: "3:11", tags: [ 'live' ] },
+                        { id: "rup", playbackLength: "3:11", tags: [ 'live' ] },
                         { id: "ntb", playbackLength: "4:19", tags: [ 'live' ] },
                         { id: "sy", playbackLength: "4:10", tags: [ 'live' ] },
                         { id: "wimo", playbackLength: "4:30", tags: [ 'live' ] }
@@ -462,7 +462,7 @@
                     tracks:
                     [
                         { id: "glr", playbackLength: "4:36", tags: [ 'first' ] },
-                        { id: "2n2r", playbackLength: "3:45", tags: [ 'rerelease' ] },
+                        { id: "twoNights", playbackLength: "3:45", tags: [ 'rerelease' ] },
                         { id: "f", playbackLength: "3:22", tags: [ 'rerelease' ] },
                         { id: "sb", playbackLength: "2:43", tags: [ 'rerelease' ] },
                         { id: "ootd", playbackLength: "4:29", tags: [ 'rerelease' ] },
@@ -474,7 +474,7 @@
                         { id: "ntb", playbackLength: "4:40", tags: [ 'rerelease' ] },
                         { id: "sh", playbackLength: "3:29", tags: [ 'rerelease' ] },
                         { id: "wimo", playbackLength: "3:43", tags: [ 'rerelease' ] },
-                        { id: "lnl", playbackLength: "4:31", tags: [ 'rerelease' ] },
+                        { id: "lal", playbackLength: "4:31", tags: [ 'rerelease' ] },
                         { id: "oyh", playbackLength: "5:11", tags: [ 'rerelease' ] },
                         { id: "sy", playbackLength: "3:48", tags: [ 'rerelease' ] },
                         { id: "cmc", playbackLength: "3:39", tags: [ 'first', 'original' ] }
@@ -482,20 +482,20 @@
                     dvdTracks:
                     [
                         { id: "cmc", playbackLength: "4:36", tags: [ 'lyric' ], description: "A brand-new lyric video of 'Call Me Crazy', with video of the band playing the song in a music video-type format in the background." },
-                        { id: "2n2r", playbackLength: "3:45", tags: [ 'rerelease', 'lyric' ], description: "A re-release of the 2 Nights 2 Remember lyric vid for the short version of the song previously featured on the Crush 40 YouTube channel." },
+                        { id: "twoNights", playbackLength: "3:45", tags: [ 'rerelease', 'lyric' ], description: "A re-release of the 2 Nights 2 Remember lyric vid for the short version of the song previously featured on the Crush 40 YouTube channel." },
                         { id: "ootd", playbackLength: "3:45", tags: [ 'partial-rerelease', 'lyric' ], description: "A re-release of the lyric video for this show. Interestingly however, it <i>has</i> been modified to remove the 'Rise Again' advertising text towards the end." },
                         { id: "wmf", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "A relatively low-quality camera video from Team A'Thrash of Crush 40's performance at JAPAN Game Music Festival II:RE. This is one of the very few videos to surface of the show." },
                         { id: "dnd", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show. Interestingly this song cuts in <i>earlier</i> than it does on the 2 Nights 2 Remember CD, therefore providing a small bit of previously unreleased audio." },
                         { id: "iam", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show. This song <b>was not</b> on the 2 Nights 2 Remember CD at all - making the inclusion of this song <i>very</i> special as no official audio had been heard of it previously." },
                         { id: "wm", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show." },
                         { id: "ll", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show." },
-                        { id: "ru", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show. This clip ends slightly after the 2 Nights 2 Remember CD, allowing some of <i>Sonic Heroes</i> to bleed though, which was also not featured on the CD." },
+                        { id: "rup", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show. This clip ends slightly after the 2 Nights 2 Remember CD, allowing some of <i>Sonic Heroes</i> to bleed though, which was also not featured on the CD." },
                         { id: "sy", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show. However, the opening to the song is slightly different to the 2 Nights 2 Remember CD, as there is no guitar roaring away here like on the CD." },
                         { id: "wimo", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show." },
                         { id: "oyh", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased multi-camera video of Crush 40 performing at JGMF2013." },
                         { id: "wimo", playbackLength: "3:45", tags: [ 'rerelease', 'live' ], description: "A re-release of the multi-camera video of \"What I'm Made Of...\" from JGMF2013. Their performance of Open Your Heart transitions straight into this." },
                         { id: "hw", playbackLength: "3:45", tags: [ 'live' ], description: "A re-release of Guilty's multi-camera video of 'His World' from Japan 2012, with audio from 'LIVE!'." },
-                        { id: "lnl", playbackLength: "3:45", tags: [ 'live' ], description: "A re-release of the multi-camera video of 'Live & Learn' from Japan 2011." }
+                        { id: "lal", playbackLength: "3:45", tags: [ 'live' ], description: "A re-release of the multi-camera video of 'Live & Learn' from Japan 2011." }
                     ],
                     physicalBg: "../img/visuals/Background/Discography/DTF.jpg",
                     discImg: "../img/content/discography/physical/Driving/Disc1.png",
