Adjust list appearance

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -579,9 +579,9 @@
             <h2 class="title dimentiaFont">Tracks</h2>
             <div class="tracksContents">
                 <h3 class="separator" id="cdIndicator">CD</h3>
-                <ol class="trackList" id="cdTrackList"></ol>
+                <ol class="generalList trackList" id="cdTrackList"></ol>
                 <h3 class="separator" id="dvdIndicator">Bonus DVD</h3>
-                <ol class="trackList" id="dvdTrackList"></ol>
+                <ol class="generalList trackList" id="dvdTrackList"></ol>
             </div>
         </div>
 
