--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -201,9 +201,7 @@ var members = [
     
             <div class="works">
                 <h2>Works</h2>
-                <ul class="list">
-    
-                </ul>
+                <ul class="generalList list"></ul>
             </div>
         </div>
 
