Finish layout for basic details on song view page

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -31,13 +31,32 @@
         </div>
         <div class="performances block">
             <h2 class="dimentiaFont">Performances</h2>
-            <ul class="list" id="performancesList">
+            <ul class="generalList list" id="performancesList">
                 <li class="performance">
-                    <p class="title">ABC</p>
-                    <p class="year">2011</p>
-                    <p class="description">2011</p>
+                    <div class="main">
+                        <p class="title">Sonic Adventure Presentation</p>
+                        <p class="year"><b>2011</b></p>
+                    </div>
+                    <p class="description">Before Johnny was even decided upon, this performance introduced the first ever Crush 40 song to the public for the first time.</p>
                 </li>
-                <li class="performance"><p>DEF</p></li>
+                <li class="performance">
+                    <div class="main">
+                        <p class="title">Sonic Boom 2013</p>
+                        <p class="year"><b>2013</b></p>
+                    </div>
+                </li>
+                <li class="performance">
+                    <div class="main">
+                        <p class="title">Sonic 25th Anniversary</p>
+                        <p class="year"><b>2016</b></p>
+                    </div>
+                </li>
+                <li class="performance">
+                    <div class="main">
+                        <p class="title">Sonic 30th Symphony</p>
+                        <p class="year"><b>2016</b></p>
+                    </div>
+                </li>
             </ul>
         </div>
         <div class="versions block">
