Add song performances emitter to engine

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -9,6 +9,7 @@
         <link href="../css/site.css" rel="stylesheet">
         <link href="css/songView.css" rel="stylesheet">
 
+        <script src="../js/gigList.js"></script>
         <script src="js/songView.js"></script>
     </head>
     <body>
@@ -31,33 +32,7 @@
         </div>
         <div class="performances block">
             <h2 class="dimentiaFont">Performances</h2>
-            <ul class="generalList list" id="performancesList">
-                <li class="performance">
-                    <div class="main">
-                        <p class="title">Sonic Adventure Presentation</p>
-                        <p class="year"><b>2011</b></p>
-                    </div>
-                    <p class="description">Before Johnny was even decided upon, this performance introduced the first ever Crush 40 song to the public for the first time.</p>
-                </li>
-                <li class="performance">
-                    <div class="main">
-                        <p class="title">Sonic Boom 2013</p>
-                        <p class="year"><b>2013</b></p>
-                    </div>
-                </li>
-                <li class="performance">
-                    <div class="main">
-                        <p class="title">Sonic 25th Anniversary</p>
-                        <p class="year"><b>2016</b></p>
-                    </div>
-                </li>
-                <li class="performance">
-                    <div class="main">
-                        <p class="title">Sonic 30th Symphony</p>
-                        <p class="year"><b>2016</b></p>
-                    </div>
-                </li>
-            </ul>
+            <ul class="generalList list" id="performancesList"></ul>
         </div>
         <div class="versions block">
             <h2 class="dimentiaFont">Variants</h2>
