Add back button navigation

--- a/base/bodyEnd.html
+++ b/base/bodyEnd.html
@@ -11,8 +11,9 @@
     <div class="floatingClose"></div>
     <div class="panel" id="myPanel">
         <div class="titlebar">
+            <button id="backButton" title="Back" class="back iconButton"><img src="img/icons/smallBackButton.svg" alt="Back Icon"></button>
             <p class="title">Loading...</p>
-            <button title="Close" class="close closeButton"><img src="img/icons/smallCloseButton.svg" alt="Close Icon"></button>
+            <button title="Close" class="close iconButton"><img src="img/icons/smallCloseButton.svg" alt="Close Icon"></button>
         </div>
 
         <div class="loading-screen">
