--- a/menus/songView.html
+++ b/menus/songView.html
@@ -9,6 +9,7 @@
         <link href="../css/site.css" rel="stylesheet">
         <link href="css/songView.css" rel="stylesheet">
 
+        <script src="../js/songList.js"></script>
         <script src="../js/gigList.js"></script>
         <script src="js/songView.js"></script>
     </head>
