Add source navigation to "Lyrics" section

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -24,12 +24,8 @@
         </div>
         <div class="lyrics block">
             <h2 class="dimentiaFont">Lyrics</h2>
-            <p class="source" id="lyricsSource">(Sourced from 2 Nights 2 Remember booklet)</p>
-            <div class="text" id="lyricsText">
-                <p>
-                    Some lyrics of this song
-                </p>
-            </div>
+            <div class="source" id="lyricsSource"></div>
+            <div class="text" id="lyricsText"></div>
         </div>
         <div class="performances block">
             <h2 class="dimentiaFont">Performances</h2>
