Fix incorrect IDs on "Super Sonic Songs"

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -175,7 +175,7 @@
                         { id: "ug", playbackLength: "4:45", tags: [ 'cover', 'first' ] },
                         { id: "ahs", playbackLength: "4:02", tags: [ 'rerelease' ] },
                         { id: "ntb", playbackLength: "4:40", tags: [ 'rerelease' ] },
-                        { id: "ru", playbackLength: "4:35", tags: [ 'rerelease' ] },
+                        { id: "rup", playbackLength: "4:35", tags: [ 'rerelease' ] },
                         { id: "itw", playbackLength: "4:29", tags: [ 'rerelease' ] },
                         { id: "wmf", playbackLength: "5:11", tags: [ 'rerelease' ] },
                         { id: "fw", playbackLength: "5:17", tags: [ 'cover', 'first' ] },
@@ -183,7 +183,7 @@
                         { id: "wimo", playbackLength: "3:44", tags: [ 'rerelease' ] },
                         { id: "ll", playbackLength: "5:38", tags: [ 'rerelease' ] },
                         { id: "kotw", playbackLength: "4:32", tags: [ 'remix' ] },
-                        { id: "lnl", playbackLength: "4:31", tags: [ 'rerelease' ] },
+                        { id: "lal", playbackLength: "4:31", tags: [ 'rerelease' ] },
                         { id: "oyh", playbackLength: "4:49", tags: ['remix'] },
                         { id: "dg", playbackLength: "2:10", tags: ['rerelease'] },
                         { id: "iiy", playbackLength: "4:58", tags: [ 'original', 'first' ] },
