Add game and year to song page

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -15,7 +15,11 @@
     </head>
     <body class="page">
         <div class="intro block">
-            <h1 id="songTitle">Revvin' Up</h1>
+            <h1 id="txtTitle"></h1>
+            <div class="extra">
+                <p id="txtGame"></p>
+                <p id="txtYear"></p>
+            </div>
         </div>
 
         <!-- Smallscreen Tabs -->
