Standardise dimentia font use

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -571,12 +571,12 @@
         </div>
 
         <div class="descriptionSection block">
-            <h2 class="dimentiaFont">Description</h2>
+            <h2 class="dimentiaTitle">Description</h2>
             <div class="text"></div>
         </div>
 
         <div class="tracks block" id="trackList">
-            <h2 class="title dimentiaFont">Tracks</h2>
+            <h2 class="title dimentiaTitle">Tracks</h2>
             <div class="tracksContents">
                 <h3 class="separator" id="cdIndicator">CD</h3>
                 <ol class="generalList trackList" id="cdTrackList"></ol>
@@ -587,7 +587,7 @@
 
         <div class="physical block" id="physical">
             <div class="physicalTitle">
-                <h2 class="physicalTitleText dimentiaFont">Physical Media</h2>
+                <h2 class="physicalTitleText dimentiaTitle">Physical Media</h2>
                 <p class="physicalTitleExpand"><img src="../img/icons/expand.svg">Click images to zoom</p>
             </div>
 
