--- a/menus/songView.html
+++ b/menus/songView.html
@@ -33,26 +33,26 @@
 
         <!-- Description -->
         <div class="desc block">
-            <h2 class="dimentiaFont">Description</h2>
+            <h2 class="dimentiaTitle">Description</h2>
             <div id="descText"></div>
         </div>
 
         <!-- Lyrics -->
         <div class="lyrics block">
-            <h2 class="dimentiaFont">Lyrics</h2>
+            <h2 class="dimentiaTitle">Lyrics</h2>
             <div class="source" id="lyricsSource"></div>
             <div class="text" id="lyricsText"></div>
         </div>
 
         <!-- Performances -->
         <div class="performances block">
-            <h2 class="dimentiaFont">Performances</h2>
+            <h2 class="dimentiaTitle">Performances</h2>
             <ul class="generalList list" id="performancesList"></ul>
         </div>
 
         <!-- Variants -->
         <div class="versions block">
-            <h2 class="dimentiaFont">Variants</h2>
+            <h2 class="dimentiaTitle">Variants</h2>
             <p>To be filled in</p>
         </div>
     </body>
