Start new "Versions" section of "Song View"

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -52,8 +52,9 @@
 
         <!-- Variants -->
         <div class="versions block">
-            <h2 class="dimentiaTitle">Variants</h2>
-            <p>To be filled in</p>
+            <h2 class="dimentiaTitle">Versions</h2>
+            <ul class="groupsList" id="groupsList"></ul>
+            <p>Work in progress</p>
         </div>
     </body>
 </html>
