Improve version group appearance

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -53,8 +53,10 @@
         <!-- Variants -->
         <div class="versions block">
             <h2 class="dimentiaTitle">Versions</h2>
-            <ul class="groupsList" id="groupsList"></ul>
-            <p>Work in progress</p>
+            <div class="groups">
+                <ul class="longGroupsList groupsList" id="longGroupsList"></ul>
+                <ul class="shortGroupsList groupsList" id="shortGroupsList"></ul>
+            </div>
         </div>
     </body>
 </html>
