Add song view background

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -53,7 +53,7 @@
         <!-- Variants -->
         <div class="versions block">
             <h2 class="dimentiaTitle">Versions</h2>
-            <div class="groups">
+            <div class="groups" id="groups">
                 <ul class="longGroupsList groupsList" id="longGroupsList"></ul>
                 <ul class="shortGroupsList groupsList" id="shortGroupsList"></ul>
             </div>
