Move "Performances" to tab

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -13,7 +13,7 @@
         <script src="../js/gigList.js"></script>
         <script src="js/songView.js"></script>
     </head>
-    <body class="page">
+    <body class="page lyricsOpen">
         <div class="intro block">
             <h1 id="txtTitle"></h1>
             <div class="extra">
@@ -25,8 +25,8 @@
         <!-- Smallscreen Tabs -->
         <div class="tabs block">
             <ul class="tabSet">
-                <li class="tab" id="descriptionTab"><p>Description</p></li>
                 <li class="tab" id="lyricsTab"><p>Lyrics</p></li>
+                <li class="tab descTab" id="descriptionTab"><p>Description</p></li>
                 <li class="tab" id="performancesTab"><p>Performances</p></li>
             </ul>
         </div>
