Add info section to song "Versions"

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -57,6 +57,28 @@
                 <ul class="longGroupsList groupsList" id="longGroupsList"></ul>
                 <ul class="shortGroupsList groupsList" id="shortGroupsList"></ul>
             </div>
+            <div class="info">
+                <div class="details">
+                    <h3 class="title" id="versionTitle">Current Song</h3>
+                    <p class="isOfficial" id="versionTitleSub">(Official Description)</p>
+                    <p class="description" id="versionDesc">A very long description it's just so long ahhhhhhhhhhh lol ok</p>
+                    <div class="inSong"><p>This song is not in the game!</p></div>
+                    <div class="credits">
+                        <p><b>Credit #1</b><br />abc</p>
+                        <p><b>Credit #2</b><br />def</p>
+                    </div>
+                </div>
+                <div class="appearances">
+                    <h4 class="title">Appears on</h4>
+                    <ul class="list generalList" id="versionAppearances">
+                        <li><p>Thing 1</p></li>
+                        <li><p>Thing 2</p></li>
+                        <li><p>Thing 3</p></li>
+                        <li><p>Thing 4</p></li>
+                        <li><p>Thing 5</p></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </body>
 </html>
