Add version selection

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -57,7 +57,7 @@
                 <ul class="longGroupsList groupsList" id="longGroupsList"></ul>
                 <ul class="shortGroupsList groupsList" id="shortGroupsList"></ul>
             </div>
-            <div class="info">
+            <div class="info hidden" id="versionInfo">
                 <div class="details">
                     <h3 class="title" id="versionTitle"></h3>
                     <p class="isOfficial" id="versionTitleSub">(Official Description)</p>
