Improve mobile experience for version info

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -50,7 +50,7 @@
             <ul class="generalList list" id="performancesList"></ul>
         </div>
 
-        <!-- Variants -->
+        <!-- Versions -->
         <div class="versions block">
             <h2 class="dimentiaTitle">Versions</h2>
             <div class="groups" id="groups">
@@ -64,6 +64,8 @@
                     <p class="description" id="versionDesc"></p>
                     <div class="inSong" id="versionInSong"><p id="versionInSongTxt"></p></div>
                     <div class="credits" id="versionCredits"></div>
+
+                    <button title="Close" class="close iconButton" id="versionInfoClose"><img src="../img/icons/smallCloseButtonWhite.svg" alt="Close Icon"></button>
                 </div>
                 <div class="appearances">
                     <h4 class="title">Appears on</h4>
